--- a/portfolio.html
+++ b/portfolio.html
@@ -364,6 +364,27 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <form class="forma">
+            <label for="email" class="subscribe-label join"
+              >Подпишитесь на рассылку
+            </label>
+            <div class="align-form">
+              <input
+                class="subscribe-input"
+                id="email"
+                type="email"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="link-btn send-btn">
+                <span class="span-between"> Подписаться </span>
+                <svg width="24" height="24">
+                  <use href="./images/icons/sprite.svg#send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
