--- a/index.html
+++ b/index.html
@@ -587,31 +587,31 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="btn-close" data-modal-close>
-          <svg class="" width="11" height="11">
+          <svg width="11" height="11" class="svg-close">
             <use href="./images/icons/sprite.svg#close"></use>
           </svg>
         </button>
         <h2 class="modal-header">Оставьте свои данные, мы вам перезвоним</h2>
         <label class="modal-label" for="user-name">Имя</label>
-        <div>
-          <svg width="13" height="13">
+        <div class="modal-svg-position">
+          <svg width="12" height="12" class="modal-svg">
             <use href="./images/icons/sprite.svg#user"></use>
           </svg>
-          <input type="text" id="user-name" />
+          <input type="text" id="user-name" class="modal-input" />
         </div>
         <label class="modal-label" for="user-phone">Телефон</label>
-        <div>
-          <svg width="13" height="13">
+        <div class="modal-svg-position">
+          <svg width="13" height="13" class="modal-svg">
             <use href="./images/icons/sprite.svg#tel"></use>
           </svg>
-          <input type="text" id="user-phone" />
+          <input type="text" id="user-phone" class="modal-input" />
         </div>
         <label class="modal-label" for="user-email">Почта</label>
-        <div>
-          <svg width="13" height="13">
-            <use href="./images/icons/sprite.svg#envelope"></use>
+        <div class="modal-svg-position">
+          <svg width="15" height="12" class="modal-svg">
+            <use href="./images/icons/sprite.svg#mail"></use>
           </svg>
-          <input type="text" id="user-email" />
+          <input type="text" id="user-email" class="modal-input" />
         </div>
         <label class="modal-label" for="comments">Комментарий</label>
         <textarea
@@ -619,7 +619,17 @@
           placeholder="Введите текст"
           class="modal-comments"
         ></textarea>
-        <button class="link-btn">Отправить</button>
+
+        <label class="custom-check"
+          ><span class="marr">
+            Соглашаюсь с рассылкой и принимаю
+            <a href="#">Условия договора</a></span
+          >
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
+
+        <button class="link-btn modal-btn">Отправить</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
