--- a/portfolio.html
+++ b/portfolio.html
@@ -371,6 +371,7 @@
             </label>
             <div class="align-form">
               <input
+                name="email"
                 class="subscribe-input"
                 id="email"
                 type="email"
