--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@
             <div class="align-form">
               <input
                 class="subscribe-input"
+                name="email"
                 id="email"
                 type="email"
                 placeholder="E-mail"
@@ -597,21 +598,36 @@
           <svg width="12" height="12" class="modal-svg">
             <use href="./images/icons/sprite.svg#user"></use>
           </svg>
-          <input type="text" id="user-name" class="modal-input" />
+          <input
+            name="user-name"
+            type="text"
+            id="user-name"
+            class="modal-input"
+          />
         </div>
         <label class="modal-label" for="user-phone">Телефон</label>
         <div class="modal-svg-position">
           <svg width="13" height="13" class="modal-svg">
             <use href="./images/icons/sprite.svg#tel"></use>
           </svg>
-          <input type="text" id="user-phone" class="modal-input" />
+          <input
+            name="user-phone"
+            type="text"
+            id="user-phone"
+            class="modal-input"
+          />
         </div>
         <label class="modal-label" for="user-email">Почта</label>
         <div class="modal-svg-position">
           <svg width="15" height="12" class="modal-svg">
             <use href="./images/icons/sprite.svg#mail"></use>
           </svg>
-          <input type="text" id="user-email" class="modal-input" />
+          <input
+            name="user-email"
+            type="text"
+            id="user-email"
+            class="modal-input"
+          />
         </div>
         <label class="modal-label" for="comments">Комментарий</label>
         <textarea
@@ -625,7 +641,7 @@
             Соглашаюсь с рассылкой и принимаю
             <a href="#">Условия договора</a></span
           >
-          <input type="checkbox" />
+          <input name="check-box" type="checkbox" />
           <span class="checkmark"></span>
         </label>
 
